Update reference library

--- a/books.bib
+++ b/books.bib
@@ -6,6 +6,17 @@
 	author = {Jazayeri, M}
 }
 
+@inproceedings{carstensen_computer_1999,
+	title = {Computer Supported Cooperative Work: New Challenges to Systems Design},
+	shorttitle = {Computer Supported Cooperative Work},
+	abstract = {This paper aims at introducing some of the essential problems addressed within {CSCW}, and to illustrate some of the approaches taken for better understanding the central aspects of cooperative work activities and to design computer-based systems supporting collaborative work activities. Our discussion and examples are to a large extent taken from design oriented work domains. Most of the claims will, however, be generally valid.},
+	booktitle = {In K. Itoh (Ed.), Handbook of Human Factors},
+	author = {Carstensen, Peter H. and Schmidt, Kjeld},
+	year = {1999},
+	pages = {619--636},
+	file = {Citeseer - Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/JHKHNA5I/Carstensen and Schmidt - 1999 - Computer Supported Cooperative Work New Challenge.pdf:application/pdf;Citeseer - Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/83PQSZGI/Carstensen and Schmidt - 1999 - Computer Supported Cooperative Work New Challenge.html:text/html}
+}
+
 @misc{archibald_application_2012,
 	title = {Application Cache is a Douchebag},
 	url = {http://alistapart.com/article/application-cache-is-a-douchebag},
@@ -15,6 +26,52 @@
 	month = may,
 	year = {2012},
 	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/A2UZE52U/Application Cache is a Douchebag.html:text/html}
+}
+
+@article{strover_rural_2001,
+	title = {Rural internet connectivity},
+	volume = {25},
+	issn = {0308-5961},
+	url = {http://www.sciencedirect.com/science/article/pii/S0308596101000088},
+	doi = {10.1016/S0308-5961(01)00008-8},
+	abstract = {This research investigates Internet connectivity in rural regions, looking specifically at four states in the {US}. Access to the Internet has assumed new significance for commercial and political reasons, and remote and sparsely populated areas typically lack the telecommunications infrastructure for reliable and fast Internet connections. Even as government programs such as the federal E-rate provisions bring Internet connectivity for institutions such as schools and libraries under the government's universal service umbrella, more general Internet access to a broader community constituency has not been addressed within policy circles. Even the deployment of so-called “national” Internet services favors urban regions.
+
+Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaking this research, as was financial support from Southwestern Bell and the Rural Policy Institute. The comments of an anonymous reviewer helped greatly.},
+	number = {5},
+	urldate = {2014-12-01},
+	journal = {Telecommunications Policy},
+	author = {Strover, Sharon},
+	month = jun,
+	year = {2001},
+	keywords = {Competition, Internet service provider, Regulation, Rural, Telecommunications},
+	pages = {331--347},
+	file = {ScienceDirect Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/2RP9FFVC/Strover - 2001 - Rural internet connectivity.pdf:application/pdf}
+}
+
+@book{fielding_fielding_2000,
+	title = {Fielding Dissertation: Chapter 5: Representational State Transfer ({REST})},
+	shorttitle = {Fielding Dissertation},
+	publisher = {Retrieved from},
+	author = {Fielding, Roy},
+	year = {2000}
+}
+
+@inproceedings{nasanen_mobile_2009,
+	address = {New York, {NY}, {USA}},
+	series = {{CHI} '09},
+	title = {Mobile Media in the Social Fabric of a Kindergarten},
+	isbn = {978-1-60558-246-7},
+	url = {http://doi.acm.org/10.1145/1518701.1519031},
+	doi = {10.1145/1518701.1519031},
+	abstract = {At first blush, mobile media may appear a promising solution to the problem arising from the fact that parents in the present-day kindergarten institution rely almost solely on teachers' retrospective reports on their child's daily activities. However, a kindergarten is a delicate social fabric that mixes professional roles (the teachers') with socio-emotional relationships (parenting and caring) and involves stakeholders who are dependent on adults in the use of technology (the children). To date, no studies have been reported that critically examine the boundary conditions for successful mobile media applications in such settings. We present a study of Meaning, a one-button capture-and-push-to-Web solution that was used by a Finnish kindergarten for a month. Interviews and the amount of media sent suggest that the intervention was a success, and we report on seven uses of media. However, all uses were critically affected by the users' social fabric, in which the teachers were the nexus. We conclude by discussing various ways in which the heterogeneity of the user group affected mobile media use.},
+	urldate = {2014-12-01},
+	booktitle = {Proceedings of the {SIGCHI} Conference on Human Factors in Computing Systems},
+	publisher = {{ACM}},
+	author = {Näsänen, Jaana and Oulasvirta, Antti and Lehmuskallio, Asko},
+	year = {2009},
+	keywords = {intervention, kindergarten, mobile media, power},
+	pages = {2167--2176},
+	file = {ACM Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/KUEEKZDS/Näsänen et al. - 2009 - Mobile Media in the Social Fabric of a Kindergarte.pdf:application/pdf}
 }
 
 @article{paulson_building_2005,
@@ -165,6 +222,22 @@ Thanks for installing Zotero.}
 	author = {Crockford, Douglas},
 	month = jul,
 	year = {2006}
+}
+
+@article{palmer_computer_1994,
+	title = {Computer supported cooperative work},
+	volume = {27},
+	issn = {0018-9162},
+	doi = {10.1109/2.291295},
+	abstract = {As the information highway becomes a reality and appropriate hardware and software become readily available, anyone using a computer will be able to engage in some form of computer-supported cooperative work within the next few years. However, much work remains to be done to bring computer supported cooperative work ({CSCW}) into everyday use, including: developing user-friendly software; addressing the social dynamics of group activities; standardizing various terms; and handling the difficult interactions between multiple tasks performed by multiple groups. The paper considers some of the difficult problems relating to the technological developments that will enable people to work in any mode.{\textless}{\textgreater}},
+	number = {5},
+	journal = {Computer},
+	author = {Palmer, J.D. and Fields, N.A.},
+	month = may,
+	year = {1994},
+	keywords = {Collaborative software, Collaborative work, computer supported cooperative work, Concurrent computing, group activities, groupware, Hardware, hardware, Heart, human factors, information highway, multiple groups, multiple tasks, office automation, Production, Protocols, Road transportation, social dynamics, software, Software performance, technological developments, Terminology, user-friendly software, user interface, user interfaces},
+	pages = {15--17},
+	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/88BFT23P/Palmer and Fields - 1994 - Computer supported cooperative work.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/CPCR7ZPE/Palmer and Fields - 1994 - Computer supported cooperative work.pdf:application/pdf}
 }
 
 @inproceedings{taivalsaari_death_2011,
@@ -321,6 +394,18 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/XEVMXKXI/abs_all.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/DVH9VFRD/Tesarik et al. - 2008 - User interface design practices in simple single p.pdf:application/pdf}
 }
 
+@article{costello_building_2007,
+	title = {Building web services the rest way},
+	volume = {11},
+	url = {http://staff.frederick.ac.cy/com.bd/Web%20Engineering%20I/Readings/Building%20Web%20Services%20the%20REST%20Way.pdf},
+	urldate = {2014-12-01},
+	journal = {{UR} L: http://www. xfront. com/{REST}-Web-Services. html. Ultima Consulta},
+	author = {Costello, Roger L.},
+	year = {2007},
+	pages = {2007},
+	file = {[PDF] osoitteesta frederick.ac.cy:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/Q69XK6MR/Costello - 2007 - Building web services the rest way.pdf:application/pdf}
+}
+
 @misc{_google_????,
 	title = {Google Wave Operational Transformation - Google Wave Federation Protocol},
 	url = {http://www.waveprotocol.org/whitepapers/operational-transform},
@@ -350,6 +435,16 @@ This dissertation defines a framework for understanding software architecture vi
 	year = {2005}
 }
 
+@article{deacon_model-view-controller_2009,
+	title = {Model-view-controller (mvc) architecture},
+	url = {http://wiki.pureweber.com/uploads/Ebooks/%E8%BD%AF%E4%BB%B6%E8%AE%BE%E8%AE%A1%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E7%B3%BB%E7%BB%9F%E6%9E%B6%E6%9E%84/MVC.pdf},
+	urldate = {2014-12-01},
+	journal = {Online][Citado em: 10 de março de 2006.] http://www. jdl. co. uk/briefings/{MVC}. pdf},
+	author = {Deacon, John},
+	year = {2009},
+	file = {[PDF] osoitteesta pureweber.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NIX5Z4XI/Deacon - 2009 - Model-view-controller (mvc) architecture.pdf:application/pdf}
+}
+
 @incollection{mason_semistructured_2004,
 	edition = {0},
 	title = {Semistructured Interview},
@@ -359,6 +454,19 @@ This dissertation defines a framework for understanding software architecture vi
 	author = {Mason, Jennifer},
 	year = {2004},
 	pages = {1021--1022}
+}
+
+@article{bentley_basic_1997,
+	title = {Basic support for cooperative work on the World Wide Web},
+	volume = {46},
+	url = {http://www.sciencedirect.com/science/article/pii/S1071581996901081},
+	number = {6},
+	urldate = {2014-12-01},
+	journal = {International journal of human-computer studies},
+	author = {Bentley, Richard and Appelt, Wolfgang and Busbach, Uwe and Hinrichs, Elke and Kerr, Douglas and Sikkel, Klaas and Trevor, Jonathan and Woetzel, Gerd},
+	year = {1997},
+	pages = {827--846},
+	file = {[PDF] osoitteesta utwente.nl:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/CMAU95Z4/Bentley et al. - 1997 - Basic support for cooperative work on the World Wi.pdf:application/pdf;Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/WQPG39QG/Bentley et al. - 1997 - Basic support for cooperative work on the World Wi.html:text/html}
 }
 
 @techreport{taivalsaari_mashware:_2009,
@@ -389,6 +497,20 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NGHJH2K6/cookiedetectresponse.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/VIRER83T/Xylomenos et al. - 2001 - TCP performance issues over wireless links.pdf:application/pdf}
 }
 
+@article{carroll_notification_2003,
+	title = {Notification and awareness: synchronizing task-oriented collaborative activity},
+	volume = {58},
+	shorttitle = {Notification and awareness},
+	url = {http://www.sciencedirect.com/science/article/pii/S1071581903000247},
+	number = {5},
+	urldate = {2014-12-01},
+	journal = {International Journal of Human-Computer Studies},
+	author = {Carroll, John M. and Neale, Dennis C. and Isenhour, Philip L. and Rosson, Mary Beth and McCrickard, D. Scott},
+	year = {2003},
+	pages = {605--632},
+	file = {[PDF] osoitteesta interruptions.net:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/PTR9H73M/Carroll et al. - 2003 - Notification and awareness synchronizing task-ori.pdf:application/pdf;Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/TM5D8STX/Carroll et al. - 2003 - Notification and awareness synchronizing task-ori.html:text/html}
+}
+
 @book{laplante_dictionary_2000,
 	title = {Dictionary of Computer Science, Engineering and Technology},
 	isbn = {9780849326912},
@@ -399,6 +521,25 @@ This dissertation defines a framework for understanding software architecture vi
 	month = dec,
 	year = {2000},
 	keywords = {Computers / Computer Science, Computers / General, Technology \& Engineering / Electrical, Technology \& Engineering / Engineering (General), Technology \& Engineering / Environmental / General}
+}
+
+@article{saad_shared_1996,
+	series = {Artificial Intelligence in Computer-Aided Design},
+	title = {Shared understanding in computer-supported collaborative design},
+	volume = {28},
+	issn = {0010-4485},
+	url = {http://www.sciencedirect.com/science/article/pii/0010448595000259},
+	doi = {10.1016/0010-4485(95)00025-9},
+	abstract = {We propose that computer-support for collaborative design requires a shared understanding of the design artifact among a design team. The development and support for this shared understanding builds on current developments and research in {AI}, cad, {CSCW} and computational models of design. The shared understanding should be an explicit representation in order to be effectively shared. The explicit representation should comprise both a visual representation and a semantic model. In this paper we present an architecture for computer-supported collaborative design that distinguishes between a shared visual representation and a shared underlying representation. The development of the underlying representation combines graphical and semantic objects than can be abstracted and aggregated as a tangled hierarchy.},
+	number = {3},
+	urldate = {2014-12-01},
+	journal = {Computer-Aided Design},
+	author = {Saad, Milad and Maher, Mary Lou},
+	month = mar,
+	year = {1996},
+	keywords = {computer-supported collaborative design, design semantics, multimedia},
+	pages = {183--192},
+	file = {ScienceDirect Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/3WVUENPF/Saad and Maher - 1996 - Shared understanding in computer-supported collabo.pdf:application/pdf;ScienceDirect Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NIGE6XGR/Saad and Maher - 1996 - Shared understanding in computer-supported collabo.html:text/html}
 }
 
 @misc{_.ajaxerror_????,
