Shaving the yak

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -1,4 +1,3 @@
-e 
 \thispagestyle{empty}
  
 \vspace*{-.5cm}\noindent
@@ -28,7 +27,10 @@ e
 \end{spacing}
 \end{minipage}
 \end{flushright}
- 
+
+
+
+%% ----------------------------------------
 \newpage
  
 \setcounter{page}{1} % tämä tarvitaan, jottei ensimmäinen sivu kansilehden jälkeen olisi numero 2.
@@ -42,7 +44,7 @@ e
 \textsf{Xxxxxkuu 2015}\\
 \textsf{Pääaine: }\\
 \textsf{Tarkastajat: Tommi Mikkonen}\\
-\textsf{Avainsanat: JavaScript, Single-Page Application, }\\
+\textsf{Avainsanat: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
 \noindent
@@ -51,6 +53,11 @@ Tekstiä
 \noindent
 Tekstiä
 
+
+
+
+
+%% ----------------------------------------
 \newpage
 \chapter*{ABSTRACT}
 \begin{spacing}{1.0}
@@ -58,41 +65,52 @@ Tekstiä
 \textsf{Master's Degree Programme in Information Technology}\\
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis, xx pages}\\
-\textsf{xxxxxx 2014}\\
+\textsf{xxxxxx 2015}\\
 \textsf{Major: }\\
-\textsf{Examiner: }\\
-\textsf{Keywords: }\\
+\textsf{Examiner: Tommi Mikkonen}\\
+\textsf{Keywords: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
  % Konteksti
 \noindent
-Tekstiä
+Here will be dragons
  
  % Ongelma
 \noindent
-Tektsiä
 
  % Tässä diplomityössä (mitä tehty ratkaisemiseksi)
 \noindent
-Tekstiä
 
 % Arvio onnistumisesta
 \noindent
-Tektsiä
 
+
+
+
+%% ----------------------------------------
 \newpage
  
 \chapter*{PREFACE}
 \noindent 
 
 Your advertisement could be here.
- 
+
+
+
+
+%% ----------------------------------------
 \newpage
 \tableofcontents
 %\newpage
 %\listoffigures
 %\listoftables
 
+
+
+
+
+
+%% ----------------------------------------
 % \newpage
 % \chapter*{TERMS AND DEFINITIONS}
 %  
@@ -104,7 +122,10 @@ Your advertisement could be here.
 %  
 % \end{termiluettelo} 
  
- 
+
+
+
+%% ----------------------------------------
 \newpage
 \renewcommand{\chaptermark}[1]{\markboth{\thechapter. \ #1}{}}
 \renewcommand{\sectionmark}[1]{\markright{}{}}
