Emergency alert defcon 5 commit

--- a/general/c_references.tex
+++ b/general/c_references.tex
@@ -1,7 +1,7 @@
 
 \renewcommand{\bibname}{References}
 \bibliographystyle{plain}
-\bibliography{books}
+\bibliography{thesis-mnie}
 
 % \printbibliography
 
