Small adjustments based on JTUP thesis

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -42,7 +42,7 @@
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Diplomityö, xx sivua}\\
 \textsf{Xxxxxkuu 2015}\\
-\textsf{Pääaine: }\\
+\textsf{Pääaine: Ohjelmistotuotanto}\\
 \textsf{Tarkastajat: Tommi Mikkonen}\\
 \textsf{Avainsanat: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
@@ -66,7 +66,7 @@ Tekstiä
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis, xx pages}\\
 \textsf{xxxxxx 2015}\\
-\textsf{Major: }\\
+\textsf{Major: Software Engineering}\\
 \textsf{Examiner: Tommi Mikkonen}\\
 \textsf{Keywords: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
@@ -83,6 +83,8 @@ Here will be dragons
 
 % Arvio onnistumisesta
 \noindent
+
+
 
 
 
