Update latest bibfile from Zotero

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -45,7 +45,7 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 	year = {2001},
 	keywords = {Competition, Internet service provider, Regulation, Rural, Telecommunications},
 	pages = {331--347},
-	file = {ScienceDirect Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/2RP9FFVC/Strover - 2001 - Rural internet connectivity.pdf:application/pdf}
+	file = {ScienceDirect Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/2RP9FFVC/Strover - 2001 - Rural internet connectivity.pdf:application/pdf;ScienceDirect Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/FVIP4TMR/Strover - 2001 - Rural internet connectivity.html:text/html}
 }
 
 @book{fielding_fielding_2000,
@@ -191,6 +191,13 @@ Thanks for installing Zotero.}
 	file = {Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/IK62MVZF/Casario et al. - 2011 - HTML5 Local Storage.pdf:application/pdf;Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/USIZSX5D/Casario et al. - 2011 - HTML5 Local Storage.html:text/html}
 }
 
+@article{piirainen_constructive_2013,
+	title = {Constructive Synergy in Design Science Research: A Comparative Analysis of Design Science Research and the Constructive Research Approach},
+	author = {Piirainen, Kalle and Gonzalez, Rafael},
+	year = {2013},
+	file = {Piirainen and Gonzalez - 2013 - Seeking Constructive Synergy Design Science and t.pdf:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/7KGCK67H/Piirainen and Gonzalez - 2013 - Seeking Constructive Synergy Design Science and t.pdf:application/pdf}
+}
+
 @article{duebendorfer_why_2009,
 	title = {Why silent updates boost security},
 	volume = {302},
@@ -252,6 +259,19 @@ Thanks for installing Zotero.}
 	keywords = {binary software, Browsers, end user software, Graphics, {HTML}5, information distribution, information sharing, interactive Web applications, Internet, {JavaScript}, Kernel, Lively Kernel, Programming, Software engineering, software engineering research, Three dimensional displays, Web applications, {WebGL}, web programming, Web sites, World Wide Web},
 	pages = {17--23},
 	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/WVFRSB9M/abs_all.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/7KZ5Z5KW/Taivalsaari et al. - 2011 - The Death of Binary Software End User Software Mo.pdf:application/pdf}
+}
+
+@article{hevner_three_2007,
+	title = {A three cycle view of design science research},
+	volume = {19},
+	url = {http://aisel.aisnet.org/cgi/viewcontent.cgi?article=1017&context=sjis},
+	number = {2},
+	urldate = {2014-12-03},
+	journal = {Scandinavian journal of information systems},
+	author = {Hevner, Alan R.},
+	year = {2007},
+	pages = {4},
+	file = {[PDF] osoitteesta temple.edu:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/H9Z4STRX/Hevner - 2007 - A three cycle view of design science research.pdf:application/pdf}
 }
 
 @inproceedings{qian_web_2012,
@@ -411,6 +431,19 @@ This dissertation defines a framework for understanding software architecture vi
 	url = {http://www.waveprotocol.org/whitepapers/operational-transform},
 	urldate = {2014-11-24},
 	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/KA7USF53/Google Wave Operational Transformation - Google Wa.html:text/html}
+}
+
+@book{hevner_design_2010,
+	title = {Design Research in Information Systems: Theory and Practice},
+	isbn = {9781441956538},
+	shorttitle = {Design Research in Information Systems},
+	abstract = {The study of Information Systems ({IS}) design is an essential part of the education of {IS} students and professionals. The purpose of this book is to provide a thorough reference on Design Science Research ({DSR}), and it comes from two authors closely identified with {DSR} – Alan Hevner and Samir Chatterjee. As founders of the Design Science Research in Information Systems and Technology ({DESRIST}) annual conference, and as leading educators and researchers in the field, these authors, along with several invited contributors , are uniquely qualified to create this easy-to-read, easy-to-understand, and easy-to-apply text/reference. Suitable for graduate courses in {IS}, computer science, software engineering, engineering design and other design-oriented fields, it can be used as a core text or a reference for doctoral seminars in {DSR}. {IS} faculty and researchers will find much of value here as well. It requires no extensive background in design and can be appreciated by practitioners working in {IS} or technology design. Its 18 chapters are all individually referenced, and two appendices provide a reprint of the seminal 2004 {MISQ} paper by Hevner, March, Park, and Ram, as well as a list of exemplar papers in Design Science. The book provides a thorough introduction to {DSR}, a look at {DSR} in {IS}, examinations of {DSR} frameworks and design theory, and a look at the key principles of {DSR} in {IS}. Other chapters look at design for software-intensive systems, people and design, the past and present of software designs, evaluation methods, focus-group use, design creativity, and a design language for knowledge management systems. Later chapters explore integrating action research with design research, design science in management disciplines, a critical realist perspective of {DSR} in {IS}, a taxonomic look at design of emerging digital services, the dissemination of {DSR}, and, finally, a look at the future for {DSR} in {IS}.},
+	language = {en},
+	publisher = {Springer Science \& Business Media},
+	author = {Hevner, Alan and Chatterjee, Samir},
+	month = jun,
+	year = {2010},
+	keywords = {Computers / Information Technology, Design / General}
 }
 
 @inproceedings{zepeda_desktop_2007,
