Small adjustments and fixes based on Tukkari feedback

--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -17,6 +17,10 @@
 \usepackage{listings}
 \captionsetup[lstlisting]{ format=listing, labelfont=white, textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize} }
 
+\usepackage{nowidow}
+
+\usepackage{hyperref}
+
 
 % omia käskyjä voi lisätä tähän väliin, esim. \newcommand{\angs}{\textsl{\AA}}
 
