Improved version of Introduction

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -1,4 +1,11 @@
 
+@misc{statcounter_global_????,
+	title = {Global Stats},
+	url = {http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411},
+	urldate = {2014-12-04},
+	author = {StatCounter}
+}
+
 @inproceedings{jazayeri_trends_????,
 	title = {Some Trends in Web Application Development},
 	url = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621},
