Add sources for Case Study to bibfile

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -421,6 +421,13 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/XEVMXKXI/abs_all.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/DVH9VFRD/Tesarik et al. - 2008 - User interface design practices in simple single p.pdf:application/pdf}
 }
 
+@misc{w3.org_web_????,
+	title = {Web Storage - the {localStorage} attribute},
+	url = {http://www.w3.org/TR/webstorage/#the-localstorage-attribute},
+	urldate = {2014-12-11},
+	author = {W3.org}
+}
+
 @article{costello_building_2007,
 	title = {Building web services the rest way},
 	volume = {11},
@@ -433,11 +440,39 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {[PDF] osoitteesta frederick.ac.cy:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/Q69XK6MR/Costello - 2007 - Building web services the rest way.pdf:application/pdf}
 }
 
+@book{lazar_research_2010,
+	title = {Research Methods in Human-Computer Interaction},
+	isbn = {9780470723371},
+	abstract = {Continual technological evolution has led to an explosion of new techniques in Human-Computer Interaction ({HCI}) research. Research Methods in Human-Computer Interaction is a thoroughly comprehensive guide to performing research and is essential reading for both quantitative and qualitative methods. Chapters cover a broad range of topics relevant to the collection and analysis of {HCI} data, going beyond experimental design and surveys, to cover ethnography, time diaries, physiological measurements, case studies, and other essential elements in the well-informed {HCI} researcher's toolkit.  “This book is a must read for anyone in the field of Human-Computer Interaction. The multi-disciplinarian approach, housed in the reality of the technological world today, makes for a practical and informative guide for user interface designers, software and hardware engineers and anyone doing user research.”Dr. Mary Czerwinski, Research Area Manager, Microsoft Research, {USA}  “Research Methods in {HCI} is an excellent read for practitioners and students alike. It discusses all the must-know theory, provides detailed instructions on how to carry out the research, and offers great examples. I loved it!”  Professor Vanessa Evers, Professor, Human Computer Studies Lab, University of Amsterdam, the Netherlands   "The book is superb: comprehensive, clear, and engaging! This is a one-stop {HCI} methods reference library. If you can only buy one {HCI} methods book, this is the one!"Dr. Clare-Marie Karat, {IBM} {TJ} Watson Research, {USA}, and recipient of the 2009 {ACM} {SIGCHI} Lifetime Service Award  “A much needed and very useful book, covering important {HCI} research methods overlooked in standard research methods texts.”  Professor Gilbert Cockton, School of Design, Northumbria University, United Kingdom},
+	language = {en},
+	publisher = {John Wiley \& Sons},
+	author = {Lazar, Dr Jonathan and Feng, Dr Jinjuan Heidi and Hochheiser, Dr Harry},
+	month = feb,
+	year = {2010},
+	keywords = {Computers / User Interfaces},
+	file = {Lazar et al 2010_Chapter 7 Case studies.compressed.pdf:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/74HMP2D2/Lazar et al 2010_Chapter 7 Case studies.compressed.pdf:application/pdf}
+}
+
 @misc{_google_????,
 	title = {Google Wave Operational Transformation - Google Wave Federation Protocol},
 	url = {http://www.waveprotocol.org/whitepapers/operational-transform},
 	urldate = {2014-11-24},
 	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/KA7USF53/Google Wave Operational Transformation - Google Wa.html:text/html}
+}
+
+@book{yin_case_2013,
+	address = {Los Angeles},
+	edition = {Fifth Edition edition},
+	title = {Case Study Research: Design and Methods},
+	isbn = {9781452242569},
+	shorttitle = {Case Study Research},
+	abstract = {Providing a complete portal to the world of case study research, the Fifth Edition of Robert K. Yin’s bestselling text offers comprehensive coverage of the design and use of the case study method as a valid research tool. The book offers a clear definition of the case study method as well as discussion of design and analysis techniques. The Fifth Edition has been updated with nine new case studies, three new appendices, seven tutorials presented at the end of relevant chapters, increased coverage of values and ethics, expanded discussion on logic models, a brief glossary, and completely updated citations. This book includes exemplary case studies drawn from a wide variety of academic fields.},
+	language = {English},
+	publisher = {{SAGE} Publications, Inc},
+	author = {Yin, Robert K.},
+	month = may,
+	year = {2013},
+	file = {Yin 2009 Case Study Research_chap 1 ja 2 osittain.pdf:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/RSHGQNKM/Yin 2009 Case Study Research_chap 1 ja 2 osittain.pdf:application/pdf}
 }
 
 @book{hevner_design_2010,
