Convert "don't" -> "do not"

--- a/example-improving/s_pretest.tex
+++ b/example-improving/s_pretest.tex
@@ -49,7 +49,7 @@ The efficiency of defect removal for personal desk checking is between 25\% and 
 
 Client reviews of specification is as well among the oldest of defect removal methods. It is still not enough used in average software projects. One of the authors of "The Economy of Software Quality" has got experience in lawsuits for canceled or defective projects. In most of the lawsuits the supplier of the software accuses the customer for failing to review the designs and other documents of not making a remark about any problems during the reviews. In some cases the customer has even accepted the materials quoted in the trial.
 
-The products reviewed by customers usually don't include inner workings of software applications, like source code, test cases or detailed design. Capers Jones presents a list of 12 major items in directly funded software projects, which usually are reviewed:
+The products reviewed by customers usually do not include inner workings of software applications, like source code, test cases or detailed design. Capers Jones presents a list of 12 major items in directly funded software projects, which usually are reviewed:
 
 % TODO: Näihin lause tai pari kuvailemaan tarkoitusta
 %	Liekö tarpeellista?
