Add interview template as an appendix

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -13,7 +13,7 @@
 {\bf\large \textsf{Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis}
  
-\vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
+\vspace{6.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm, muutoin 8.7cm
  
 \begin{flushright}
   
